notebook_manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notebook-manager-api-deployment
  namespace: cjarcau
  labels:
    app: notebook-manager-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notebook-manager-api
  template:
    metadata:
      labels:
        app: notebook-manager-api
    spec:
      serviceAccountName: notebook-manager-api-service-account
      containers:
      - name: notebook-manager-api
        image: scr4pp/kubernetes-api:arm33
        ports:
        - name: api
          containerPort: 8000
        imagePullPolicy: IfNotPresent
