notebook_manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notebook-manager-api-service
  namespace:
spec:
  selector:
    app: notebook-manager-api
  ports:
    - name: api
      protocol: TCP
      port: 49152
      targetPort: api
  type: ClusterIP
