notebook_manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notebook-manager-api-ingress
  namespace:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
spec:
  rules:
    - http:
        paths:
          - path: /notebook_manager
            pathType: Prefix
            backend:
              service:
                name: notebook-manager-api-service
                port:
                  number: 49152
  ingressClassName: nginx
